--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/demo/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
+  <base href="/demo" />
 </head>
 
 <body>
